# rustpi-legacy

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  aarch64-none-elf.json  build.rs  debug.gdb  kernel.lds  kernel.riscv64.lds  main.rs  print.rs  rustpi.aarch64.img  rustpi.riscv64.img  start.S  target.aarch64.json  target.riscv64.json
.cargo/: config
.github/workflows/: rust.yml
boot/: mmu.h  start.S  vm.c
src/: config.rs  main.rs  mmio.rs  print.rs  start.S  uart.rs
src/arch/: mod.rs  traits.rs
src/arch/aarch64/: config.rs  context_frame.rs  core.rs  exception.S  exception.rs  interface.rs  mmu.rs  mod.rs  page_table.rs  start.rs  vm_descriptor.rs
src/arch/common/: core.rs
src/arch/riscv64/: config.rs  context_frame.rs  exception.S  exception.rs  interface.rs  mod.rs  page_table.rs  start.S  start.rs  vm_descriptor.rs
src/board/: mod.rs  riscv.rs  rpi3.rs  traits.rs
src/driver/: mmio.rs  mod.rs  timer.rs  uart.rs
src/driver/riscv/: mod.rs  plic.rs  timer.rs  uart.rs
src/driver/rpi3/: mod.rs  timer.rs  uart.rs
src/lib/: allocator.rs  bitmap.rs  core.rs  elf.rs  exception.S  exception.rs  isr.rs  kvm.rs  mod.rs  page_frame.rs  page_table.rs  print.rs  process.rs  process_pool.rs  program.S  scheduler.rs  spinlock.rs  syscall.rs  thread.rs  user_image.rs  uvm.rs  vm.rs  vm_descriptor.rs
src/mm/: config.rs  heap.rs  mod.rs  page_frame.rs  page_pool.rs
user/: README.md
