[package]
name = "rustpi"
version = "0.1.0"
build = "build.rs"

[[bin]]
name = "rustpi"
path = "src/main.rs"

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"


[dependencies]
cortex-a = { git = "https://github.com/tonnylyz/cortex-a"}
register = "0.5.0"
buddy_system_allocator = "0.3.9"
spin = "0.5.2"
xmas-elf = "0.7.0"
